--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
 
 <!-- Home start -->
 	<header>
-		<div class="container">
+		<div class="container container-small">
 			<div class="row">
 				<div class="col-md-12">
 					<section id="home" class="hero-sec">
 				        <div>
 				          <h2 class="home-title uppercase" id="gradient">ANDY KIM</h2>
-				          <h2 style="padding-bottom: 60px;" class="text-white">Digital product designer with specialties in responsive Web/UI design based on latest best practiced UX trends.</h1>
-				        	<!-- <img class="main-hero" src="assets/images/andy-hero_2017.png">
-				        	<img class="name_tag" src="assets/images/name_tag2.png"> -->
+				          <h2 class="text-white">Digital product designer with specialties in responsive Web/UI design based on latest best practiced UX trends.</h2>
+				          <p>I am a UX/UI and Product Designer with over 7 years of experience creating and scaling user-centric designs. I specialize in design systems and web dashboard platforms, blending creativity and user needs to deliver exceptional experiences. Additionally, </p>
+				          	<p>I am also passionate about music production, working with hip hop and R&B artists, and creating graphic design posters related to music and typeface.</p>
 				        </div>
 					</section>
 				</div>
@@ -70,55 +70,67 @@
 <!-- Home end -->
 
 
-		<div class="container">
+		<div class="container container-small">
+			<hr style="border-top:1px solid #313131; padding-bottom: 40px;">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-12 project-section">
 					<a href="designsystem.html">
-						<div class="work-thumb">
-							<div class="work-title">
-					          <h3 class="uppercase">Webex<br>Momentum <br/>Design System<br/>
-					          <span class="work-category"></span>
-					          </h3>
-					        </div>
-				        	<img src="assets/images/momentum_thumb.jpg">
-				        </div>
-			        </a>
+						<div>
+							<div>
+					      <!-- <h3 class="uppercase">Webex<br>Momentum <br/>Design System<br/> -->
+					        <span class="work-category"></span></h3>
+					    </div>
+				        	<img src="assets/images/momentum_thumb.png">
+				    </div>
+			    </a>
+			    <div class="text-box">
+				    <p class="project-title">Momentum Design System Rebrand</p>
+				    <p>The Momentum Design System Rebrand improves user experience with better accessibility, updated colors, and a refined typeface for a more cohesive Webex interface.</p>
+				  </div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-12 project-section">
 					<a href="doc_site.html">
-						<div class="work-thumb">
-						 <div class="work-title">
-				        	<h3 class="uppercase">Momentum <br/>Design System<br/>Website<br>
-				        	<span class="work-category">Design & Manage</span>
+						<div>
+						 <div>
+				        	<!-- <h3 class="uppercase">Momentum <br/>Design System<br/>Website<br> -->
 				        	</h3>
 				        </div>
-				        	<img src="assets/images/web_thumb.jpg">
+				        	<img src="assets/images/web_thumb.png">
 				        </div>
-				    </a>
+				   </a>
+				   <div class="text-box">
+				    <p class="project-title">Momentum Design System Rebrand</p>
+				    <p>The Momentum Design System website, now fully rebranded, serves as the go-to resource for detailed system documentation and information on Momentum’s application in products.</p>
+				  </div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-12 project-section">
 					<a href="keyscreen.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h3 class="uppercase">Momentum<br/>Key Screen Library<br/>
-					          <span class="work-category">QA & maintain</span>
-					          </h3>
-					        </div>
-				        	<img src="assets/images/keyscreen_thumb.jpg">
-				        </div>
-			        </a>
+					       <!-- <span class="work-category">QA & maintain</span> -->
+					       </h3>
+					     </div>
+				        	<img src="assets/images/keyscreen_thumb.png">
+				     </div>
+			     </a>
+			     <div class="text-box">
+			     		<p class="project-title">Momentum Key Screen Library</p>
+			     		<p>To prevent outdated or incorrect screenshots in presentations, we created a library of product and feature key screens for designers and PMs to use as a reliable reference.</p>
+			     </div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-12 project-section">
 					<a href="webex_2020.html">
 						<div class="work-thumb">
-							<div class="work-title">
-					          <h3 class="uppercase">Cisco<br/>Webex Digital<br/>
-					          <span class="work-category">Web Design</span>
-					          </h3>
-					        </div>
-				        	<img src="assets/images/webexdigital_thumb.jpg">
-				        </div>
-			        </a>
+							<div>
+					       </h3>
+					       </div>
+				        	<img src="assets/images/ftsw_thumb.png">
+				    </div>
+			    </a>
+			    <div class="text-box">
+			    	<p class="project-title">First Time Set-up Wizard</p>
+			    	<p>FTSW (First Time Sign-Up Wizard) simplifies the process for partners to sign up for paid or trial services and set up meeting, calling, and device functionalities.</p>
+			    </div>
 				</div>
 				<!-- <div class="col-md-4">
 					<a href="webex_trial.html">
@@ -191,31 +203,37 @@
 				</div>
 			</div>
 		</div> -->
-		<div class="container last">
-			<div class="row">
-				<div>
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
-						<div class="icon-center">
-							<a class="icon-pad" href="assets/ak_resume_2024.pdf" target="_blank">
-								<svg class="icon-size">
-							    	<use xlink:href="#resume"/>
-							  	</svg>
-						    </a>
-						    <a class="icon-pad" href="https://dribbble.com/kimandy703" target="_blank">
-					        	<svg class="icon-size">
-							    	<use xlink:href="#dribbble"/>
-							  	</svg>      
-						    </a>
-						    <a class="icon-pad" href="https://instagram.com/kimandy703" target="_blank">
-					        	<svg class="icon-size">
-							    	<use xlink:href="#instagram"/>
-							  	</svg>
-						    </a>
+<div class="container container-small">
+	<hr style="border-top:1px solid #313131; padding-bottom: 40px;">
+		<div class="text-box">
+			<h3 class="project-title">Contact Me</h3>
+			<p>I’m looking to join a cross-functional team that prioritizes improving user experience through accessible and innovative design. Got a project in mind? I’d love to connect!</p>
+		</div>
+</div>
+<div class="container last">
+	<div class="row">
+		<div>
+			<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="icon-center">
+						<a class="icon-pad" href="assets/ak_resume_2024.pdf" target="_blank">
+							<svg class="icon-size">
+							  <use xlink:href="#resume"/>
+							</svg>
+						</a>
+						<a class="icon-pad" href="https://dribbble.com/kimandy703" target="_blank">
+					    <svg class="icon-size">
+							  <use xlink:href="#dribbble"/>
+							</svg>      
+						</a>
+						<a class="icon-pad" href="https://instagram.com/kimandy703" target="_blank">
+					    <svg class="icon-size">
+							  <use xlink:href="#instagram"/>
+							</svg>
+						</a>
 						</div>
 					</div>
 					<div class="col-md-4"></div>
-	
 				</div>
 			</div>
 		</div>
@@ -285,6 +303,7 @@
 				</div>
 			</div>
 		</div> -->
+
 
 <svg display="none">
   <symbol width="24" height="24" viewBox="0 0 128 128" id="resume">
