--- a/designsystem.html
+++ b/designsystem.html
@@ -70,21 +70,23 @@
 				</div>
 			</div>
 			<div class="container  container-small">
-			<div class="row product_site">
-				<div class="col-md-6">
+			<div class="row product_site txt-box-pad-bot-40">
+				<div class="col-md-12">
 					<h3>Brief</h3>
 					<p class="txt-box-pad-bot-20">We rebuilt our Momentum Design System to update outdated technology, enhance to fit all of our collaboration products, improve usability, scalability, and A11y accessibility.</p>
+				</div>
+				<div class="col-md-12">
+					<h3>Project</h3>
+					<p class="txt-box-pad-bot-20">Momentum Design team is undergoing a full rebrand of the Momentum Design system that serves all collaborative products. Through meticulous auditing and adding detailed documentation, we've gathered information on all UI components used in our products. Once finalized, this redesigned system will become the standard across all Webex Products, ensuring consistency and efficiency in our design processes.</p>
+				</div>
+				<div class="col-md-6">
 					<h3>Created at:</h3>
 					<p>Momentum Design Systems Team</p>
 				</div>
 				<div class="col-md-6">
-					<h3>Project</h3>
-					<p class="txt-box-pad-bot-20">Momentum Design team is undergoing a full rebrand of the Momentum Design system that serves all collaborative products. Through meticulous auditing and adding detailed documentation, we've gathered information on all UI components used in our products. Once finalized, this redesigned system will become the standard across all Webex Products, ensuring consistency and efficiency in our design processes.</p>
 					<h3>Role</h3>
 					<p class="txt-box-pad-bot-20">Component Design, Component Documentation, Component QC</p>
-					
 				</div>
-
 			</div>
 		</div>
 		</div>
@@ -99,15 +101,15 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid cisco_black">
+	<div class="container-fluid container-small cisco_black">
 		<div class="row col-sm-12">
 <!-- 			<div class="col-sm-4 content-panel">
 			</div> -->
-			<div class="col-sm-6 content-panel">
+			<div class="col-sm-12 content-panel">
 				<h3 class="text-white">Problem</h3>
 				<p>Simply put, we did not have a consistent design system, single source of truth created to serve all Momentum products. </p>
-				<p>As a results of that, different product teams had different component to fit their needs, resulting in messy, inconsistent design. There was also lack of communication among teams, to share any components or guidelines, and often times, no one really knew who made which component</p>			</div>
-			<div class="col-sm-6 content-panel">
+				<p>As a results of that, different product teams had different component to fit their needs, resulting in messy, inconsistent design. There was also lack of communication among teams, to share any components or guidelines, and often times, no one really knew who made which component</p>			
+			
 				<h3 class="text-white">Goals</h3>
 				<li>Design standards</li>
 				<p>As mentioned, because every team was making their own component, we needed to set a standard that needed to be followed across all design teams, from planning, researching, creating, reviewing, and shipping</p>
@@ -130,10 +132,10 @@
 		</div>
 	</div>
 
-	<div class=" container-tiny cisco_black">
+	<div class="container container-small cisco_black">
 		<div class="row">
 			<div class="col-sm-8 div-center content-panel container-small">
-				<h1 class="text-white">Execution</h1>
+				<h3 class="text-white">Execution</h3>
 				<p>The team started by dissecting all of the components. We took the Atomic Design approach, by rebuilding the component starting from Atoms, then Molecules, to Organism, and Templates if necessary.</p>
 				<p>Each of our designers started by learning Atomic Design System principle, as it can provide great benefit to the design system. Atomic design enables the designers to have consistency, scalability, reusability, and better collaboration.</p>
 			</div>
@@ -149,7 +151,7 @@
 	<div class=" container-tiny cisco_black">
 		<div class="row">
 			<div class="col-sm-8 div-center content-panel container-small">
-				<h1 class="text-white">Dark Mode</h1>
+				<h3 class="text-white">Dark Mode</h3>
 				<p>For the rebrand, we also implemented the Dark mode, which was not available on the current system.</p>
 				<p>According to the research, about 70% of software engineers prefer working in Dark mode, so it seems natural for them to create tools with dark backgrounds and colored text. Also research team got lot of user feedback from customers wanting dark mode. Dark mode also helps you save battery life, reduce blue light, which will reduce any stress on the eyes from the screen.</p>
 			</div>
@@ -165,7 +167,7 @@
 	<div class="cisco_black container-tiny">
 		<div class="row">
 			<div class="col-sm-8 div-center content-panel container-small">
-				<h1 class="text-white">Renewed System</h1>
+				<h3 class="text-white">Renewed System</h3>
 				<p>As a team we have audited total of 39 components, deprecated 4 components, added 5 new components</p>
 				<p>From the 39 components audited, 34 of the components got rebranded and documented.</p>
 				<p>During the rebrand process, we have also create Component Documentation template, and Guidelines that sets rules for Content order, Spacing, Component example padding, responsiveness design and new Type system.</p>
@@ -174,15 +176,15 @@
 	</div>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-12  no-pad">
+			<div class="col-sm-12 no-pad">
 				<img class="img-center" src="assets/images/momentum_rebrand/guide.jpg">
 			</div>
 		</div>
 	</div>
-	<div class="cisco_black container-tiny">
+	<div class="cisco_black container container-small">
 		<div class="row">
-			<div class="col-sm-8 div-center content-panel">
-				<h1 class="text-white">Typography</h1>
+			<div class="col-sm-12 div-center content-panel">
+				<h3 class="text-white">Typography</h3>
 				<p>CiscoSansTT was created in 2010 and widely adopted for all internal and external communications, as well as by many tools and apps. Recent audits have highlighted the many issues with the current font files, such as alignment and rendering issues, file sizes, missing glyphs and poorly executed language support. </p>
 				<p>Inter is a font family carefully crafted and designed for computer screens and available through Common License. Inter features a tall x-height to aid in readability of mixed-case and lower-case text. Inter is offered as both traditional constant font files (one per style, e.g. Bold Italic, Medium, etc.) as well as a Variable Font. The font files include "hinted" versions that have additional data in them for assisting ClearType, the text rasterizer used by Microsoft Windows.</p>
 			</div>
@@ -195,30 +197,73 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid cisco_black">
-		<div class="row col-sm-12">
-			<div class="col-sm-4 content-panel">
+	<div class="container container-fluid cisco_black">
+			<div class="col-sm-8 div-center content-panel container-small">
 				<h1 class="text-white">Results
 				</h1>
-			</div>
-			<div class="col-sm-4 content-panel">
-				<p>Design Systems are always evolving and getting updated. It serves multiple products and designers, so we are constantly getting requests for updates, new components and reviews. What I showed here is just a portion of what goes into a complete design system. A complete system contains the following:</p>
-			</div>
-			<div class="col-sm-4 content-panel">
+				<p class="custom-list">Design Systems are always evolving and getting updated. It serves multiple products and designers, so we are constantly getting requests for updates, new components and reviews. What I showed here is just a portion of what goes into a complete design system. A complete system contains the following:</p>
 				<h3 class="text-white">Documentation</h3>
-				<p>Full details on how to use, implement in figma, use cases and specs.</p>
+				<p class="custom-list">Full details on how to use, implement in figma, use cases and specs.</p>
 				<h3 class="text-white">Guidelines</h3>
-				<p>Includes layout, tone and voice, content style, color tokens, type tokens and more</p>
+				<p class="custom-list">Includes layout, tone and voice, content style, color tokens, type tokens and more</p>
 				<h3 class="text-white">Training</h3>
-				<p>We have also created training on how the components were built, implementing on figma, updating, file hygiene and product use cases</p>
+				<p class="custom-list">We have also created training on how the components were built, implementing on figma, updating, file hygiene and product use cases</p>
 				<h3 class="text-white">Website</h3>
-				<p>We are also putting all the documentation information on the Momentum Design System website, so designers can have easier access to the documentation.</p>
+				<p class="custom-list">We are also putting all the documentation information on the Momentum Design System website, so designers can have easier access to the documentation.</p>
 
 			</div>
 		</div>
 	</div>
 
-	
+<div class="container container-small">
+	<hr style="border-top:1px solid #313131; padding-bottom: 40px;">
+		<div class="text-box">
+			<h3 class="project-title">Contact Me</h3>
+			<p>I’m looking to join a cross-functional team that prioritizes improving user experience through accessible and innovative design. Got a project in mind? I’d love to connect!</p>
+		</div>
+</div>
+
+<div class="container last">
+	<div class="row">
+		<div>
+			<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="icon-center">
+						<a class="icon-pad" href="assets/ak_resume_2024.pdf" target="_blank">
+							<svg class="icon-size">
+							  <use xlink:href="#resume"/>
+							</svg>
+						</a>
+						<a class="icon-pad" href="https://dribbble.com/kimandy703" target="_blank">
+					    <svg class="icon-size">
+							  <use xlink:href="#dribbble"/>
+							</svg>      
+						</a>
+						<a class="icon-pad" href="https://instagram.com/kimandy703" target="_blank">
+					    <svg class="icon-size">
+							  <use xlink:href="#instagram"/>
+							</svg>
+						</a>
+						</div>
+					</div>
+					<div class="col-md-4"></div>
+				</div>
+			</div>
+		</div>
+
+<svg display="none">
+  <symbol width="24" height="24" viewBox="0 0 128 128" id="resume">
+   <path d="m30.13 51.31h20a1.75 1.75 0 0 0 1.75-1.75v-5.12a11.067 11.067 0 0 0 -4.4-8.832 9.977 9.977 0 1 0 -14.713 0 11.08 11.08 0 0 0 -4.387 8.832v5.12a1.75 1.75 0 0 0 1.75 1.75zm10-28.894a6.477 6.477 0 1 1 -6.477 6.477 6.485 6.485 0 0 1 6.473-6.476zm-8.25 22.024a7.576 7.576 0 0 1 3.87-6.594 9.857 9.857 0 0 0 8.754 0 7.56 7.56 0 0 1 3.876 6.594v3.37h-16.5z"/><path d="m112.654 4.75h-97.308a1.75 1.75 0 0 0 -1.746 1.75v115a1.75 1.75 0 0 0 1.75 1.75h97.308a1.75 1.75 0 0 0 1.75-1.75v-115a1.75 1.75 0 0 0 -1.754-1.75zm-1.75 115h-93.804v-111.5h93.8z"/><path d="m26.346 65.75h75.308a1.75 1.75 0 1 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m26.346 80.194h75.308a1.75 1.75 0 0 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m26.346 109.083h75.308a1.75 1.75 0 0 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m26.346 94.639h75.308a1.75 1.75 0 1 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m64 22.417h37.654a1.75 1.75 0 0 0 0-3.5h-37.654a1.75 1.75 0 0 0 0 3.5z"/><path d="m64 36.861h37.654a1.75 1.75 0 0 0 0-3.5h-37.654a1.75 1.75 0 0 0 0 3.5z"/><path d="m64 51.306h37.654a1.75 1.75 0 0 0 0-3.5h-37.654a1.75 1.75 0 0 0 0 3.5z"/>
+  </symbol>
+
+  <symbol width="24" height="24" viewBox="0 0 24 24" id="dribbble">
+    <path d="m16.354 23.17c.02-.006.039-.014.059-.021 12.215-4.853 8.836-23.149-4.413-23.149-6.649 0-12 5.42-12 12 0 8.327 8.434 14.269 16.354 11.17zm-11.073-3.111c.852-1.432 3.609-5.472 8.315-6.866.984 2.509 1.674 5.436 1.742 8.755-3.566 1.199-7.327.392-10.057-1.889zm11.532 1.263c-.131-3.189-.782-6.017-1.71-8.467 2.082-.325 4.492-.108 7.225.987-.581 3.261-2.666 6.002-5.515 7.48zm5.672-9.031c-3.01-1.131-5.663-1.272-7.959-.834-.355-.8-.728-1.569-1.123-2.277 3.523-1.407 5.605-3.122 6.537-4.03 1.645 1.904 2.622 4.369 2.545 7.141zm-3.61-8.209c-.848.807-2.845 2.437-6.26 3.77-1.674-2.648-3.464-4.516-4.598-5.562 3.628-1.494 7.812-.856 10.858 1.792zm-12.292-1.059c.856.753 2.735 2.561 4.548 5.357-2.49.802-5.612 1.391-9.409 1.474.604-2.894 2.408-5.346 4.861-6.831zm-5.051 8.337c4.25-.069 7.69-.74 10.409-1.648.376.659.733 1.377 1.076 2.123-4.735 1.508-7.694 5.401-8.827 7.159-1.828-2.04-2.836-4.702-2.658-7.634z"/>
+  </symbol>
+
+  <symbol width="24" height="24" viewBox="0 0 512 512" id="instagram">
+    <path d="m75 512h362c41.355469 0 75-33.644531 75-75v-362c0-41.355469-33.644531-75-75-75h-362c-41.355469 0-75 33.644531-75 75v362c0 41.355469 33.644531 75 75 75zm-45-437c0-24.8125 20.1875-45 45-45h362c24.8125 0 45 20.1875 45 45v362c0 24.8125-20.1875 45-45 45h-362c-24.8125 0-45-20.1875-45-45zm0 0"/><path d="m256 391c74.4375 0 135-60.5625 135-135s-60.5625-135-135-135-135 60.5625-135 135 60.5625 135 135 135zm0-240c57.898438 0 105 47.101562 105 105s-47.101562 105-105 105-105-47.101562-105-105 47.101562-105 105-105zm0 0"/><path d="m406 151c24.8125 0 45-20.1875 45-45s-20.1875-45-45-45-45 20.1875-45 45 20.1875 45 45 45zm0-60c8.269531 0 15 6.730469 15 15s-6.730469 15-15 15-15-6.730469-15-15 6.730469-15 15-15zm0 0"/>
+  </symbol>
+</svg>
 	
 <!-- Scroll to top -->
 	<div class="scroll-up">
