--- a/designsystem.html
+++ b/designsystem.html
@@ -53,6 +53,7 @@
 <!-- Home start -->
 	<header>
 		<div class="container-fluid cisco_black">
+
 			<div class="container container-small">
 				<div class="row">
 					<div class="col-md-12">
@@ -61,70 +62,60 @@
 				          		<h2 class="home-title uppercase" id="gradient">WORKS</h2>
 				          		<img class="cisco_logo" src="assets/images/momentum_design_logo.png">
 				          		<h1 class="uppercase">Momentum Design System<br/>Component and Documentation</h1>
-				          		<!-- <h5 class="work-desc">Branding for Giannis Antetoukoumpo's first signature shoes with Nike. Concept of being the First Giannis, and not following anyone else. Logo uses the Greek letters "G" and "A". First Ginannis Alpha.</h5> -->
-				        	<!-- <img class="main-hero" src="assets/images/andy-hero_2017.png">
-				        	<img class="name_tag" src="assets/images/name_tag2.png"> -->
+				          		<p>The Momentum visual system is modern, vibrant, accessible and relevant. The brand elements are flexible to bring our products together in a coherent and intuitive way, without ever overwhelming or distracting the user.</p>
 				        	</div>
 						</section>
 					</div>
 				</div>
 			</div>
-			<div class="container  container-small">
-			<div class="row product_site txt-box-pad-bot-40">
-				<div class="col-md-12">
-					<h3>Brief</h3>
-					<p class="txt-box-pad-bot-20">We rebuilt our Momentum Design System to update outdated technology, enhance to fit all of our collaboration products, improve usability, scalability, and A11y accessibility.</p>
-				</div>
-				<div class="col-md-12">
-					<h3>Project</h3>
-					<p class="txt-box-pad-bot-20">Momentum Design team is undergoing a full rebrand of the Momentum Design system that serves all collaborative products. Through meticulous auditing and adding detailed documentation, we've gathered information on all UI components used in our products. Once finalized, this redesigned system will become the standard across all Webex Products, ensuring consistency and efficiency in our design processes.</p>
-				</div>
-				<div class="col-md-6">
-					<h3>Created at:</h3>
-					<p>Momentum Design Systems Team</p>
-				</div>
-				<div class="col-md-6">
-					<h3>Role</h3>
-					<p class="txt-box-pad-bot-20">Component Design, Component Documentation, Component QC</p>
+
+			<div class="container container-fluid container-small">
+				<div class="row product_site txt-box-pad-bot-40">
+					<div class="col-md-6">
+						<h3>Created at:</h3>
+						<p>Momentum Design Systems Team</p>
+					</div>
+					<div class="col-md-6">
+						<h3>Role</h3>
+						<p class="txt-box-pad-bot-20">Component Design, Component Documentation, Component QC</p>
+					</div>
+					<div class="col-md-12">
+						<img class="img-center txt-box-pad-bot-20" src="assets/images/momentum_rebrand/components.jpg">
+					</div>
 				</div>
 			</div>
-		</div>
+
 		</div>
 		 
 	</header>
 <!-- Home end -->
 
-    	<div class="container-fluid cisco_black">
-		<div class="row">
-			<div class="col-sm-12 work-stats">
-				<img class="img-center" src="assets/images/momentum_rebrand/components.jpg">
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid container-small cisco_black">
-		<div class="row col-sm-12">
-<!-- 			<div class="col-sm-4 content-panel">
-			</div> -->
-			<div class="col-sm-12 content-panel">
+	<div class="container container-small work-stats">
+		<div class="row product_site">
+
+			<div class="col-md-12 ">
 				<h3 class="text-white">Problem</h3>
-				<p>Simply put, we did not have a consistent design system, single source of truth created to serve all Momentum products. </p>
-				<p>As a results of that, different product teams had different component to fit their needs, resulting in messy, inconsistent design. There was also lack of communication among teams, to share any components or guidelines, and often times, no one really knew who made which component</p>			
+				<p>Simply put, we lacked a consistent design system and a single source of truth for all Momentum products. </p>
+				<p class="txt-box-pad-bot-60">As a result, different product teams created components to fit their individual needs, leading to a messy and inconsistent design across the board. There was also a significant lack of communication among teams regarding shared components or guidelines, and often, no one knew who was responsible for creating specific components.</p>
+		
 			
-				<h3 class="text-white">Goals</h3>
-				<li>Design standards</li>
-				<p>As mentioned, because every team was making their own component, we needed to set a standard that needed to be followed across all design teams, from planning, researching, creating, reviewing, and shipping</p>
-				<li>Process</li>
-				<p>We want to set up a process where designers are empowered and free to contribute. The components has to be easy to maintain and update for the creators, and easy to use for the users.</p>
-				<li>Industry standard</li>
-				<p>The new design system has to be up to industry standard with best practice, design trends and most importantly accessibility</p>
-				<li>Documentation</li>
-				<p>To eliminate the inconsistency and help the users use the components in a proper way, through, detailed documentation and how-to was necessary</p>
+				<h3 class="text-white txt-box-pad-bot-20">Goals</h3>
+				<span class="text-grey">Design standards</span>
+				<p class="txt-box-pad-bot-20">As previously mentioned, since each team was creating its own components, it became essential to establish a standard that all design teams could follow. This standard would guide the entire process, from planning and research to creation, review, and final delivery, ensuring consistency and cohesion across all designs.</p>
+				<span class="text-grey">Process</span>
+				<p class="txt-box-pad-bot-20">We aim to establish a process that empowers designers and encourages contributions. The components should be easy to maintain and update for the creators while also being user-friendly for the end users.</p>
+				<span class="text-grey">Industry standard</span>
+				<p class="txt-box-pad-bot-20">The new design system must meet industry standards, embrace best practices and trends, and prioritize accessibility. It should be robust, adaptable, and easy to maintain, ensuring a seamless experience for all users.</p>
+				<span class="text-grey">Documentation</span>
+				<p class="txt-box-pad-bot-20">To eliminate inconsistencies and ensure that users can properly utilize the components, it was essential to provide thorough and detailed documentation, accompanied by clear how-to guides and usage instructions.</p>
 
 			</div>
 		</div>
 	</div>
 
-	<div class="container-fluid">
+
+
+	<div class="container-fluid txt-box-pad-bot-100">
 		<div class="row">
 			<div class="col-sm-12  no-pad">
 				<img class="img-center" src="assets/images/momentum_rebrand/momentum_docu.jpg">
@@ -132,84 +123,66 @@
 		</div>
 	</div>
 
-	<div class="container container-small cisco_black">
-		<div class="row">
-			<div class="col-sm-8 div-center content-panel container-small">
-				<h3 class="text-white">Execution</h3>
-				<p>The team started by dissecting all of the components. We took the Atomic Design approach, by rebuilding the component starting from Atoms, then Molecules, to Organism, and Templates if necessary.</p>
-				<p>Each of our designers started by learning Atomic Design System principle, as it can provide great benefit to the design system. Atomic design enables the designers to have consistency, scalability, reusability, and better collaboration.</p>
+<div class="container container-small work-stats">
+		<div class="row product_site">
+
+			<div class="col-md-12 ">
+				<h3 class="text-white">Focus</h3>
+				<p class="txt-box-pad-bot-20">The two primary design systems in use were the Admin Design System and the Legacy Momentum Design System. Since the Admin Design System was specifically created for the Control Hub, we decided to prioritize the Legacy Momentum Design System and integrate any missing elements from the Admin Design System.</p>
+				<span class="text-grey">Competitive analysis</span>
+				<p class="txt-box-pad-bot-20">We conducted a competitive analysis by researching Google Material, IBM Carbon, and Shopify Polaris. Our focus was on the types of components each system offers and the depth of documentation provided for each component.
+</p>
+				<span class="text-grey">Atomic system</span>
+				<p class="txt-box-pad-bot-20">As we developed a new Figma design system file from scratch, we adopted the Atomic Design methodology for the rebrand. This approach enhances consistency, capability, and reusability while fostering improved collaboration among designers.</p>
+				<span class="text-grey">Dark mode</span>
+				<p class="txt-box-pad-bot-20">For the rebrand, we prioritized Dark Mode, which was absent in the current system. Research shows that about 70% of software engineers prefer Dark Mode, and user feedback indicated a strong demand for it. Additionally, Dark Mode helps save battery life, reduces blue light, and lessens eye strain.</p>
+				<span class="text-grey">Accessibility</span>
+				<p class="txt-box-pad-bot-20">The legacy system lacked thorough accessibility checks. By collaborating with A11y specialists from Applause, we established a mandatory process ensuring that no component is approved without a review with Applause designers.</p>
+				<span class="text-grey">Typography</span>
+				<p class="txt-box-pad-bot-20">CiscoSansTT, created in 2010, has been widely used but has issues like alignment problems, large file sizes, missing glyphs, and poor language support. Inter, designed for screens and available under a Common License, improves readability with its tall x-height. It is offered as both static and Variable Fonts, with hinted versions that enhance ClearType rendering on Windows.</p>
+				<div class="txt-box-pad-bot-40">
+					<img class="img-center" src="assets/images/momentum_rebrand/atomic.jpg">
+					<span class="text-grey">Atomic design level down to Atoms, then move up to Molecules and Organisms.</span>
+				</div>	
+				<div class="txt-box-pad-bot-40">
+					<img class="img-center" src="assets/images/momentum_rebrand/inter.jpg">
+					<span class="text-grey">Atomic design level down to Atoms, then move up to Molecules and Organisms.</span>
+				</div>
+
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-12  no-pad">
-				<img class="img-center" src="assets/images/momentum_rebrand/atomic.jpg">
-			</div>
-		</div>
-	</div>
-	<div class=" container-tiny cisco_black">
-		<div class="row">
-			<div class="col-sm-8 div-center content-panel container-small">
-				<h3 class="text-white">Dark Mode</h3>
-				<p>For the rebrand, we also implemented the Dark mode, which was not available on the current system.</p>
-				<p>According to the research, about 70% of software engineers prefer working in Dark mode, so it seems natural for them to create tools with dark backgrounds and colored text. Also research team got lot of user feedback from customers wanting dark mode. Dark mode also helps you save battery life, reduce blue light, which will reduce any stress on the eyes from the screen.</p>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-12  no-pad">
-				<img class="img-center" src="assets/images/momentum_rebrand/components.jpg">
-			</div>
-		</div>
-	</div>
-	<div class="cisco_black container-tiny">
-		<div class="row">
-			<div class="col-sm-8 div-center content-panel container-small">
+
+	<div class="container container-small work-stats">
+		<div class="row product_site">
+			<div class="col-md-12 ">
 				<h3 class="text-white">Renewed System</h3>
 				<p>As a team we have audited total of 39 components, deprecated 4 components, added 5 new components</p>
 				<p>From the 39 components audited, 34 of the components got rebranded and documented.</p>
-				<p>During the rebrand process, we have also create Component Documentation template, and Guidelines that sets rules for Content order, Spacing, Component example padding, responsiveness design and new Type system.</p>
+				<p class="txt-box-pad-bot-40">During the rebrand process, we have also create Component Documentation template, and Guidelines that sets rules for Content order, Spacing, Component example padding, responsiveness design and new Type system.</p>
+				<div class="txt-box-pad-bot-20">
+					<img class="img-center" src="assets/images/momentum_rebrand/systemfigma.jpg">
+					<span class="text-grey">Documentation covering Guidelines, Spec and Accessibility</span>
+				</div>	
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-12 no-pad">
-				<img class="img-center" src="assets/images/momentum_rebrand/guide.jpg">
-			</div>
-		</div>
-	</div>
-	<div class="cisco_black container container-small">
-		<div class="row">
-			<div class="col-sm-12 div-center content-panel">
-				<h3 class="text-white">Typography</h3>
-				<p>CiscoSansTT was created in 2010 and widely adopted for all internal and external communications, as well as by many tools and apps. Recent audits have highlighted the many issues with the current font files, such as alignment and rendering issues, file sizes, missing glyphs and poorly executed language support. </p>
-				<p>Inter is a font family carefully crafted and designed for computer screens and available through Common License. Inter features a tall x-height to aid in readability of mixed-case and lower-case text. Inter is offered as both traditional constant font files (one per style, e.g. Bold Italic, Medium, etc.) as well as a Variable Font. The font files include "hinted" versions that have additional data in them for assisting ClearType, the text rasterizer used by Microsoft Windows.</p>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-12  no-pad">
-				<img class="img-center" src="assets/images/momentum_rebrand/inter.jpg">
-			</div>
-		</div>
-	</div>
+
+
 	<div class="container container-fluid cisco_black">
 			<div class="col-sm-8 div-center content-panel container-small">
-				<h1 class="text-white">Results
+				<h3 class="text-white">Results
 				</h1>
-				<p class="custom-list">Design Systems are always evolving and getting updated. It serves multiple products and designers, so we are constantly getting requests for updates, new components and reviews. What I showed here is just a portion of what goes into a complete design system. A complete system contains the following:</p>
-				<h3 class="text-white">Documentation</h3>
-				<p class="custom-list">Full details on how to use, implement in figma, use cases and specs.</p>
-				<h3 class="text-white">Guidelines</h3>
-				<p class="custom-list">Includes layout, tone and voice, content style, color tokens, type tokens and more</p>
-				<h3 class="text-white">Training</h3>
-				<p class="custom-list">We have also created training on how the components were built, implementing on figma, updating, file hygiene and product use cases</p>
-				<h3 class="text-white">Website</h3>
-				<p class="custom-list">We are also putting all the documentation information on the Momentum Design System website, so designers can have easier access to the documentation.</p>
+				<p class="custom-list">Design Systems are always evolving to support all Webex products,  designers and engineers. We frequently receive requests for updates, new components, and reviews. What I've shown is just a small part of a full design system. A complete system includes:</p>
+				<span class="text-grey">Documentation</span>
+				<p class="txt-box-pad-bot-20">Full details on how to use, implement in figma, use cases and specs.</p>
+				<span class="text-grey">Guidelines</span>
+				<p class="txt-box-pad-bot-20">Includes layout, tone & voice, content style, color tokens, type tokens and more.</p>
+				<span class="text-grey">Training</span>
+				<p class="txt-box-pad-bot-20">We have also created training on how the components were built, implementing on figma, updating, file hygiene and product use cases.</p>
+				<span class="text-grey">Documentation Website</span>
+				<p class="txt-box-pad-bot-20">We are also putting all the documentation information on the Momentum Design System website, so designers can have easier access to the documentation.</p>
+				
 
 			</div>
 		</div>
