--- a/doc_site.html
+++ b/doc_site.html
@@ -80,6 +80,7 @@
 					</div>
 				</div>
 			</div>
+			
 			<div class="container work-stats container-small">
 				<div class="row product_site">
 					<div class="col-md-12 txt-box-pad-bot-20">
@@ -105,7 +106,7 @@
 			<div class="row product_site">
 				<div class="col-md-12 txt-box-pad-bot-20">
 					<h3>Planning</h3>
-					<p>TAs the sole designer working on the project, I began with a kickoff meeting involving all designers who contributed to the current website and its content.</p>
+					<p>As the sole designer working on the project, I began with a kickoff meeting involving all designers who contributed to the current website and its content.</p>
 					<p class="txt-box-pad-bot-40">From the meeting, we decided what to keep and what to discard, gathered content materials, organized the content into different categories, created an information architecture, and established a timeline.</p>
 					<h3 class="txt-box-pad-bot-20">Research & Strategy</h3>
 					<span class="text-grey">What we have</span>
@@ -220,13 +221,7 @@
 				</div>
 			</div>
 		</div>
-<!-- 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-12 work-stats">
-				<img class="img-center" src="assets/images/product_site/ch/ch_2.0.jpg">
-			</div>
-		</div>
-	</div> -->
+
 <svg display="none">
   <symbol width="24" height="24" viewBox="0 0 128 128" id="resume">
    <path d="m30.13 51.31h20a1.75 1.75 0 0 0 1.75-1.75v-5.12a11.067 11.067 0 0 0 -4.4-8.832 9.977 9.977 0 1 0 -14.713 0 11.08 11.08 0 0 0 -4.387 8.832v5.12a1.75 1.75 0 0 0 1.75 1.75zm10-28.894a6.477 6.477 0 1 1 -6.477 6.477 6.485 6.485 0 0 1 6.473-6.476zm-8.25 22.024a7.576 7.576 0 0 1 3.87-6.594 9.857 9.857 0 0 0 8.754 0 7.56 7.56 0 0 1 3.876 6.594v3.37h-16.5z"/><path d="m112.654 4.75h-97.308a1.75 1.75 0 0 0 -1.746 1.75v115a1.75 1.75 0 0 0 1.75 1.75h97.308a1.75 1.75 0 0 0 1.75-1.75v-115a1.75 1.75 0 0 0 -1.754-1.75zm-1.75 115h-93.804v-111.5h93.8z"/><path d="m26.346 65.75h75.308a1.75 1.75 0 1 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m26.346 80.194h75.308a1.75 1.75 0 0 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m26.346 109.083h75.308a1.75 1.75 0 0 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m26.346 94.639h75.308a1.75 1.75 0 1 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m64 22.417h37.654a1.75 1.75 0 0 0 0-3.5h-37.654a1.75 1.75 0 0 0 0 3.5z"/><path d="m64 36.861h37.654a1.75 1.75 0 0 0 0-3.5h-37.654a1.75 1.75 0 0 0 0 3.5z"/><path d="m64 51.306h37.654a1.75 1.75 0 0 0 0-3.5h-37.654a1.75 1.75 0 0 0 0 3.5z"/>
