--- a/index.html
+++ b/index.html
@@ -72,43 +72,39 @@
 
 		<div class="container container-small">
 			<hr style="border-top:1px solid #313131; padding-bottom: 40px;">
-			<div class="row">
+
 				<div class="col-md-12 project-section">
 					<a href="designsystem.html">
-						<div>
-							<div>
-					      <!-- <h3 class="uppercase">Webex<br>Momentum <br/>Design System<br/> -->
-					        <span class="work-category"></span></h3>
-					    </div>
+						<div class="work-thumb">
+							<div class="work-title">
+					     </div>
 				        	<img src="assets/images/momentum_thumb.png">
-				    </div>
-			    </a>
-			    <div class="text-box">
-				    <p class="project-title">Momentum Design System Rebrand</p>
+				     </div>
+				  </a>
+				  <div class="text-box">
+				   <p class="project-title">Momentum Design System Rebrand</p>
 				    <p>The Momentum Design System Rebrand improves user experience with better accessibility, updated colors, and a refined typeface for a more cohesive Webex interface.</p>
 				  </div>
 				</div>
+
 				<div class="col-md-12 project-section">
 					<a href="doc_site.html">
-						<div>
-						 <div>
-				        	<!-- <h3 class="uppercase">Momentum <br/>Design System<br/>Website<br> -->
-				        	</h3>
-				        </div>
+						<div class="work-thumb">
+							<div class="work-title">
+					     </div>
 				        	<img src="assets/images/web_thumb.png">
-				        </div>
+				     </div>
 				   </a>
 				   <div class="text-box">
-				    <p class="project-title">Momentum Design System Rebrand</p>
+				    <p class="project-title">Momentum Design System Website</p>
 				    <p>The Momentum Design System website, now fully rebranded, serves as the go-to resource for detailed system documentation and information on Momentum’s application in products.</p>
 				  </div>
 				</div>
+
 				<div class="col-md-12 project-section">
 					<a href="keyscreen.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					       <!-- <span class="work-category">QA & maintain</span> -->
-					       </h3>
 					     </div>
 				        	<img src="assets/images/keyscreen_thumb.png">
 				     </div>
@@ -118,13 +114,12 @@
 			     		<p>To prevent outdated or incorrect screenshots in presentations, we created a library of product and feature key screens for designers and PMs to use as a reliable reference.</p>
 			     </div>
 				</div>
+
 				<div class="col-md-12 project-section">
 					<a href="webex_2020.html">
 						<div class="work-thumb">
-							<div>
-					       </h3>
-					       </div>
-				        	<img src="assets/images/ftsw_thumb.png">
+							<div class="work-title"></div>
+				        <img src="assets/images/ftsw_thumb.png">
 				    </div>
 			    </a>
 			    <div class="text-box">
@@ -132,20 +127,9 @@
 			    	<p>FTSW (First Time Sign-Up Wizard) simplifies the process for partners to sign up for paid or trial services and set up meeting, calling, and device functionalities.</p>
 			    </div>
 				</div>
-				<!-- <div class="col-md-4">
-					<a href="webex_trial.html">
-						<div class="work-thumb">
-						<div class="work-title">
-				        	<h3 class="uppercase">Cisco<br>Webex Trial<br/>
-				        	<span class="work-category">UX Design, Web Design</span>
-				        	</h3>
-				        </div>
-				        	<img src="assets/images/trial_thumb.jpg">
-				        </div>
-				    </a>
-				</div> -->
+				
 			</div>
-		</div>
+
 
 		<!-- <div class="container last">
 			<div class="row">
