--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 				<div class="col-md-12 col-xs-12">
 					<section id="work-header" class="hero-sec">
 				        <div>
-				          <img class="main-hero" src="assets/images/andy-hero_2017.jpg">
+				          <img class="main-hero" src="assets/images/LT_Banner.jpg">
 				        </div>
 					</section>
 				</div>
@@ -71,10 +71,10 @@
 				<h3 class="about-subtitle text-white">About Me</h3>
 			</div>
 			<div class="col-md-8">
-				<h3 class="about-h3 text-white">UI/UX digital product designer based in Washington DC area. I currently work for a Cisco, and has experience working with clients in various fields such as US federal government, healthcare, education and agriculture, telecommunication and commercial brands.<h3/>
-				<h3 class="text-white"><br/>
-				I create visual identities through product design, web design, user interface and digital graphics based on best practiced user experience methods.</h3>
-				<h3 class="text-white"><a href="mailto:kimandy703@gmail.com">Email Me</a></h3>
+				<h3 class="about-h3 text-white txt-box-pad-bot-20">UI/UX digital product designer based in Brooklyn NY. I’m looking to join a cross-functional team that prioritizes improving user experience through accessible and innovative design. </h3>
+					<h3 class="about-h3 text-white txt-box-pad-bot-20">I have experience working with clients in various fields such as US federal government, healthcare, education and agriculture, telecommunication and commercial brands.<h3/>
+										<h3 class="text-white txt-box-pad-bot-60"><a href="mailto:kimandy703@gmail.com">Email Me</a></h3>
+						<h3 class="about-h3 text-white txt-box-pad-bot-20">Outside design, I am a music producer who specialize in hip hop and rnb beat making. I mostly work with independent artis in New Yok, and make lofi beats. You can check out my music <a href="https://www.youtube.com/@ndk703" target="empty">here</a><h3/>
 			</div>
 		</div>
 	</div>
@@ -86,21 +86,15 @@
 			</div>
 			<div class="col-md-8">
 				<div class="skill-wrap">
-					<h3 class="text-white">User Interface/Design System</h3>
+					<h3 class="text-white">Design System</h3>
 					<div class="skill-bar">
 						<span class="be-skill" data-skill-value="94%" style="background: #2e51dc;width: 94%;"></span>
 					</div>
 				</div>
 				<div class="skill-wrap">
-					<h3 class="text-white">Visual/Web Design</h3>
+					<h3 class="text-white">User Interface Design</h3>
 					<div class="skill-bar">
 						<span class="be-skill" data-skill-value="90%" style="background: #2e51dc;width: 90%;"></span>
-					</div>
-				</div>
-				<div class="skill-wrap">
-					<h3 class="text-white">User Experience Design</h3>
-					<div class="skill-bar">
-						<span class="be-skill" data-skill-value="80%" style="background: #2e51dc;width: 85%;"></span>
 					</div>
 				</div>
 				<div class="skill-wrap">
@@ -110,9 +104,15 @@
 					</div>
 				</div>
 				<div class="skill-wrap">
+					<h3 class="text-white">User Experience Design</h3>
+					<div class="skill-bar">
+						<span class="be-skill" data-skill-value="80%" style="background: #2e51dc;width: 85%;"></span>
+					</div>
+				</div>
+				<div class="skill-wrap">
 					<h3 class="text-white">Front-end Development</h3>
 					<div class="skill-bar">
-						<span class="be-skill" data-skill-value="60%" style="background: #2e51dc;width: 70%;"></span>
+						<span class="be-skill" data-skill-value="60%" style="background: #2e51dc;width: 50%;"></span>
 					</div>
 				</div>
 			</div>
@@ -127,11 +127,14 @@
 				<h3 class="about-subtitle-sm text-white">
 				  <a href="assets/ak_resume_2024.pdf" target="_blank">Download Resume</a>
 				</h3>
+				<h3 class="about-subtitle-sm text-white">
+				  <a href="https://www.linkedin.com/in/kimandy703" target="_blank">LinkedIn</a>
+				</h3>
 			</div>
 			<div class="col-md-8">
 				<div class="about-exp">
-					<h3 class="about-h3 text-white">Cisco / 2018</h3>
-					<h4 class="text-white">Senior User Experience Designer</h4>
+					<h3 class="about-h3 text-white">Cisco / 2018-24</h3>
+					<h4 class="text-white">Product Designer</h4>
 				</div>
 				<div class="about-exp">
 					<h3 class="about-h3 text-white">Reingold / 2015-17</h3>
@@ -143,47 +146,57 @@
 				</div>
 				<div class="about-exp">
 					<h3 class="about-h3 text-white">Empire Entertainment Japan / 2008-12</h3>
-					<h4 class="text-white">Producer</h4>
+					<h4 class="text-white">Event Producer</h4>
 				</div>
 			</div>
 			
 		</div>
 	</div>
 
-	<div class="container work-stats about-box">
-		<div class="row">
-			<div class="col-md-4">
-				<h3 class="about-subtitle text-white">Social Network</h3>
-			</div>
-			<div class="col-md-8">
-				<div class="about-sns linkedin">
-					<h4>
-					<a href="https://www.linkedin.com/in/kimandy703" target="_blank">
-						LinkedIn
-					</a>
-					</h4>
-				</div>
-				<div class="about-sns dribbble">
-					<h4>
-					<a href="https://dribbble.com/kimandy703" target="_blank">
-						Dribbble
-					</a>
-					</h4>
-				</div>
-				<div class="about-sns instagram">
-					<h4>
-					<a href="https://www.instagram.com/kimandy703/" target="_blank">
-						Instagram
-					</a>
-					</h4>
-				</div>
-			</div>
-			
-		</div>
-	</div>
+	
 	
 
-	
+	<div class="container last">
+	<div class="row">
+		<div>
+			<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="icon-center">
+						<a class="icon-pad" href="assets/ak_resume_2024.pdf" target="_blank">
+							<svg class="icon-size">
+							  <use xlink:href="#resume"/>
+							</svg>
+						</a>
+						<a class="icon-pad" href="https://dribbble.com/kimandy703" target="_blank">
+					    <svg class="icon-size">
+							  <use xlink:href="#dribbble"/>
+							</svg>      
+						</a>
+						<a class="icon-pad" href="https://instagram.com/kimandy703" target="_blank">
+					    <svg class="icon-size">
+							  <use xlink:href="#instagram"/>
+							</svg>
+						</a>
+						</div>
+					</div>
+					<div class="col-md-4"></div>
+				</div>
+			</div>
+		</div>
+
+<svg display="none">
+  <symbol width="24" height="24" viewBox="0 0 128 128" id="resume">
+   <path d="m30.13 51.31h20a1.75 1.75 0 0 0 1.75-1.75v-5.12a11.067 11.067 0 0 0 -4.4-8.832 9.977 9.977 0 1 0 -14.713 0 11.08 11.08 0 0 0 -4.387 8.832v5.12a1.75 1.75 0 0 0 1.75 1.75zm10-28.894a6.477 6.477 0 1 1 -6.477 6.477 6.485 6.485 0 0 1 6.473-6.476zm-8.25 22.024a7.576 7.576 0 0 1 3.87-6.594 9.857 9.857 0 0 0 8.754 0 7.56 7.56 0 0 1 3.876 6.594v3.37h-16.5z"/><path d="m112.654 4.75h-97.308a1.75 1.75 0 0 0 -1.746 1.75v115a1.75 1.75 0 0 0 1.75 1.75h97.308a1.75 1.75 0 0 0 1.75-1.75v-115a1.75 1.75 0 0 0 -1.754-1.75zm-1.75 115h-93.804v-111.5h93.8z"/><path d="m26.346 65.75h75.308a1.75 1.75 0 1 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m26.346 80.194h75.308a1.75 1.75 0 0 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m26.346 109.083h75.308a1.75 1.75 0 0 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m26.346 94.639h75.308a1.75 1.75 0 1 0 0-3.5h-75.308a1.75 1.75 0 0 0 0 3.5z"/><path d="m64 22.417h37.654a1.75 1.75 0 0 0 0-3.5h-37.654a1.75 1.75 0 0 0 0 3.5z"/><path d="m64 36.861h37.654a1.75 1.75 0 0 0 0-3.5h-37.654a1.75 1.75 0 0 0 0 3.5z"/><path d="m64 51.306h37.654a1.75 1.75 0 0 0 0-3.5h-37.654a1.75 1.75 0 0 0 0 3.5z"/>
+  </symbol>
+
+  <symbol width="24" height="24" viewBox="0 0 24 24" id="dribbble">
+    <path d="m16.354 23.17c.02-.006.039-.014.059-.021 12.215-4.853 8.836-23.149-4.413-23.149-6.649 0-12 5.42-12 12 0 8.327 8.434 14.269 16.354 11.17zm-11.073-3.111c.852-1.432 3.609-5.472 8.315-6.866.984 2.509 1.674 5.436 1.742 8.755-3.566 1.199-7.327.392-10.057-1.889zm11.532 1.263c-.131-3.189-.782-6.017-1.71-8.467 2.082-.325 4.492-.108 7.225.987-.581 3.261-2.666 6.002-5.515 7.48zm5.672-9.031c-3.01-1.131-5.663-1.272-7.959-.834-.355-.8-.728-1.569-1.123-2.277 3.523-1.407 5.605-3.122 6.537-4.03 1.645 1.904 2.622 4.369 2.545 7.141zm-3.61-8.209c-.848.807-2.845 2.437-6.26 3.77-1.674-2.648-3.464-4.516-4.598-5.562 3.628-1.494 7.812-.856 10.858 1.792zm-12.292-1.059c.856.753 2.735 2.561 4.548 5.357-2.49.802-5.612 1.391-9.409 1.474.604-2.894 2.408-5.346 4.861-6.831zm-5.051 8.337c4.25-.069 7.69-.74 10.409-1.648.376.659.733 1.377 1.076 2.123-4.735 1.508-7.694 5.401-8.827 7.159-1.828-2.04-2.836-4.702-2.658-7.634z"/>
+  </symbol>
+
+  <symbol width="24" height="24" viewBox="0 0 512 512" id="instagram">
+    <path d="m75 512h362c41.355469 0 75-33.644531 75-75v-362c0-41.355469-33.644531-75-75-75h-362c-41.355469 0-75 33.644531-75 75v362c0 41.355469 33.644531 75 75 75zm-45-437c0-24.8125 20.1875-45 45-45h362c24.8125 0 45 20.1875 45 45v362c0 24.8125-20.1875 45-45 45h-362c-24.8125 0-45-20.1875-45-45zm0 0"/><path d="m256 391c74.4375 0 135-60.5625 135-135s-60.5625-135-135-135-135 60.5625-135 135 60.5625 135 135 135zm0-240c57.898438 0 105 47.101562 105 105s-47.101562 105-105 105-105-47.101562-105-105 47.101562-105 105-105zm0 0"/><path d="m406 151c24.8125 0 45-20.1875 45-45s-20.1875-45-45-45-45 20.1875-45 45 20.1875 45 45 45zm0-60c8.269531 0 15 6.730469 15 15s-6.730469 15-15 15-15-6.730469-15-15 6.730469-15 15-15zm0 0"/>
+  </symbol>
+</svg>
 
 
 <!-- Scroll to top -->
