--- a/designsystem.html
+++ b/designsystem.html
@@ -171,8 +171,7 @@
 
 	<div class="container container-fluid cisco_black">
 			<div class="col-sm-8 div-center content-panel container-small">
-				<h3 class="text-white">Results
-				</h1>
+				<h3 class="text-white">Results</h3>
 				<p class="custom-list">Design Systems are always evolving to support all Webex products,  designers and engineers. We frequently receive requests for updates, new components, and reviews. What I've shown is just a small part of a full design system. A complete system includes:</p>
 				<span class="text-grey">Documentation</span>
 				<p class="txt-box-pad-bot-20">Full details on how to use, implement in figma, use cases and specs.</p>
@@ -182,8 +181,6 @@
 				<p class="txt-box-pad-bot-20">We have also created training on how the components were built, implementing on figma, updating, file hygiene and product use cases.</p>
 				<span class="text-grey">Documentation Website</span>
 				<p class="txt-box-pad-bot-20">We are also putting all the documentation information on the Momentum Design System website, so designers can have easier access to the documentation.</p>
-				
-
 			</div>
 		</div>
 	</div>
@@ -217,12 +214,12 @@
 							  <use xlink:href="#instagram"/>
 							</svg>
 						</a>
-						</div>
 					</div>
-					<div class="col-md-4"></div>
 				</div>
-			</div>
+			<div class="col-md-4"></div>
 		</div>
+	</div>
+</div>
 
 <svg display="none">
   <symbol width="24" height="24" viewBox="0 0 128 128" id="resume">
