--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 		<div class="container container-small">
 			<div class="row">
 				<div class="col-md-12">
-					<section id="home" class="hero-sec">
-				        <div>
+					<section>
+				        <div class="txt-box-pad-bot-60">
 				          <h2 class="home-title uppercase" id="gradient">ANDY KIM</h2>
 				          <h2 class="text-white">Digital product designer with specialties in responsive Web/UI design based on latest best practiced UX trends.</h2>
 				          <p>I am a UX/UI and Product Designer with over 7 years of experience creating and scaling user-centric designs. I specialize in design systems and web dashboard platforms, blending creativity and user needs to deliver exceptional experiences. Additionally, </p>
-				          	<p>I am also passionate about music production, working with hip hop and R&B artists, and creating graphic design posters related to music and typeface.</p>
+				          <p>I am also passionate about music production, working with hip hop and R&B artists, and creating graphic design posters related to music and typeface.</p>
 				        </div>
 					</section>
 				</div>
@@ -68,6 +68,37 @@
 		</div>
 	</header>
 <!-- Home end -->
+
+
+<div class="container container-small" id="home-title">
+			<div class="row">
+				<div class="col-md-4">
+					<section>
+				        <div>
+				          <h3 class="text-white txt-box-pad-bot-20">Design System</h3>
+				          <p>Creating a set of guidelines and reusable components for consistent and efficient user interfaces.</p>
+				        </div>
+					</section>
+				</div>
+				<div class="col-md-4">
+					<section>
+				        <div>
+				          <h3 class="text-white txt-box-pad-bot-20">App & Dashboard</h3>
+				          <p>Solving problems with visual appeal, connecting products, users, designs with experiences.</p>
+				        </div>
+					</section>
+				</div>
+				<div class="col-md-4">
+					<section>
+				        <div>
+				          <h3 class="text-white txt-box-pad-bot-20">Website</h3>
+				          <p>Creating a visually appealing user-friendly interface that communicates the proper message.</p>
+				        </div>
+					</section>
+				</div>
+			</div>
+		</div>
+
 
 
 		<div class="container container-small">
@@ -102,6 +133,19 @@
 				</div>
 
 				<div class="col-md-12 project-section">
+					<a href="webex_2020.html">
+						<div class="work-thumb">
+							<div class="work-title"></div>
+				        <img src="assets/images/ftsw_thumb.png">
+				    </div>
+			    </a>
+			    <div class="text-box">
+			    	<p class="project-title">First Time Set-up Wizard</p>
+			    	<p>FTSW (First Time Sign-Up Wizard) simplifies the process for partners to sign up for paid or trial services and set up meeting, calling, and device functionalities.</p>
+			    </div>
+				</div>
+
+				<div class="col-md-12 project-section">
 					<a href="keyscreen.html">
 						<div class="work-thumb">
 							<div class="work-title">
@@ -113,19 +157,6 @@
 			     		<p class="project-title">Momentum Key Screen Library</p>
 			     		<p>To prevent outdated or incorrect screenshots in presentations, we created a library of product and feature key screens for designers and PMs to use as a reliable reference.</p>
 			     </div>
-				</div>
-
-				<div class="col-md-12 project-section">
-					<a href="webex_2020.html">
-						<div class="work-thumb">
-							<div class="work-title"></div>
-				        <img src="assets/images/ftsw_thumb.png">
-				    </div>
-			    </a>
-			    <div class="text-box">
-			    	<p class="project-title">First Time Set-up Wizard</p>
-			    	<p>FTSW (First Time Sign-Up Wizard) simplifies the process for partners to sign up for paid or trial services and set up meeting, calling, and device functionalities.</p>
-			    </div>
 				</div>
 				
 			</div>
