--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				</div>
 
 				<div class="col-md-12 project-section">
-					<a href="webex_2020.html">
+					<a href="ftsw.html">
 						<div class="work-thumb">
 							<div class="work-title"></div>
 				        <img src="assets/images/ftsw_thumb.png">
