--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
 							  <use xlink:href="#resume"/>
 							</svg>
 						</a>
-						<a class="icon-pad" href="https://dribbble.com/kimandy703" target="_blank">
+	<!-- 					<a class="icon-pad" href="https://dribbble.com/kimandy703" target="_blank">
 					    <svg class="icon-size">
 							  <use xlink:href="#dribbble"/>
 							</svg>      
-						</a>
-						<a class="icon-pad" href="https://instagram.com/kimandy703" target="_blank">
+						</a> -->
+						<a class="icon-pad" href="https://instagram.com/ndk703_" target="_blank">
 					    <svg class="icon-size">
 							  <use xlink:href="#instagram"/>
 							</svg>
